--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,8 +8,8 @@
 body{
     background-image: url('https://cdn.pixabay.com/photo/2015/11/07/11/02/milky-way-1030765_960_720.jpg');
     background-size: auto 150vh;
-    font-family: 'Lucida Console, Regular';
-    height: 350vh;
+    font-family: 'Oswald', sans-serif;
+    height: 150vh;
     font-size: 20px;
 }
 /* se a tela tiver pelo menos 400 px vai carregar esses estlos */
@@ -20,7 +20,7 @@ body{
 }
 
     header {
-    height: 50vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,41 +39,90 @@ body{
   }
   .menu li {
     list-style: none;
+ 
   }
   .menu a{
     display: block;
-    padding: 10px 20px;
+    padding: 5px 40px 5px;
     
 
   }
   a {
     text-decoration: none;
-    color: black;
+    color: white;
   }
   
   a:hover {
-    text-decoration: underline;
-    outline-style: solid;
     font-weight: bold;
+    color: yellowgreen;
+    background-color: rgba(245, 245, 118, 0.322);
   }
   .sub-titulo,
   .titulo {
     text-align: center;
-    color: whitesmoke
+    color: whitesmoke;
+  }
+  .titulo {
+    font-size: 4em;
+    font-family: 'Gloria Hallelujah', cursive;
   }
   .sub-titulo {
     font-style: italic;
+    font-family: 'Oswald', sans-serif;
+    line-height: 1.8em;
   }
-  .port {
-    color: whitesmoke;
-  }
+.fa {
+  color: green;
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  transition: all 0,2s;
+}
   .img-portfolio {
-    height: 175px;
+    height: 200px;
     width: 225px;
+    border-radius: 4px;
+  }
+  .img-portfolio:hover {
+    transform: scale(1.05);
   }
   figcaption {
     color: whitesmoke;
   }
-  section {
-    text-align: center;
+.portifolio {
+  padding: 2em;
+  height: 100vh;
+  color: black;
   }
+.portifolio h2 {
+  color: whitesmoke;
+  font-family: 'Oswald', sans-serif;
+  margin-top: 1.5em;
+  margin-bottom: 1.7;
+  font-size: 20pt;
+
+}
+.portifolio figure {
+  text-align: center;
+
+}
+
+.portifolio .grid {
+  display: grid;
+  gap: 2em;
+  justify-content: center;
+}
+@media (min-widht:560px) {
+  .portifolio .grid {
+  grid-template-columns: 240px 240px;
+  justify-content: center;
+  }
+}
+@media (min-widht:880px) {
+  .portifolio .grid {
+    grid-template-columns: repeat(3, 240px);
+    align-content: center;
+    justify-content: center;
+    height: calc(100vh - 4em - 48px - 1.5em );
+  }
+}
